# harness-experimental

./: .gitignore  CHANGELOG.md  README.md  harness.db
.github/workflows/: harness-release.yml
crates/harness/: Cargo.toml
crates/harness-cli/: Cargo.toml
crates/harness/src/: main.rs
crates/harness/src/application/: mod.rs  ports.rs  self_update.rs  service.rs
crates/harness/src/domain/: model.rs
crates/harness/src/infrastructure/: filesystem_state.rs  git_merge.rs  mod.rs  release_handoff.rs
crates/harness/src/interface/: cli.rs  mod.rs  presenter.rs
crates/harness/tests/: clean_architecture.rs  release_update.rs  update_lifecycle.rs
docs/: ARCHITECTURE.md  HARNESS.md  HARNESS_COMPONENTS.md  IMPROVEMENT_PROTOCOL.md  README.md  SYMPHONY_SCOPE.md  TOOL_REGISTRY.md
docs/compatibility/: phase-3-active-observability-legacy.md  phase-4-mechanical-verification-legacy.md  phase-5-evolution-infrastructure-legacy.md
docs/contracts/: harness-orchestration-v1.md
docs/decisions/: 0004-sqlite-durable-layer.md  0021-consumer-first-application-legibility-phase.md  0025-latest-release-self-update-and-human-directed-conflicts.md  README.md
docs/plans/: README.md
docs/product/: installation-profiles.md  symphony-web-ui-controller.md
scripts/: README.md  harness  harness-cli-release-tag  harness-install-files.txt  harness-release-tag  install-harness.ps1  install-harness.sh  materialize-core-state.ps1  materialize-core-state.sh  test-verify-e11-external-gate.sh  validate-premerge.sh  verify-e11-external-gate.sh
tests/: README.md
(+27 files in other folders)
