[package]
name = "harness"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
self-replace = "1.5.0"
semver = "1.0.27"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
